--- a/border-radius/css/style.css
+++ b/border-radius/css/style.css
@@ -38,8 +38,8 @@ body{
   border-radius: 5px 20px 40px;
   border-radius: 5px 20px 40px 60px;
   
-  /* --------helipse-------- */
-  
+  /* --------elipse-------- */
+
   border-top-left-radius: 50px 100px;
 
   border-radius: 100px 50px 5px 500px/ 200px 50px 300px 70px;
