refactor contexto de apilamiento

--- a/contexto-de-apilamiento/css/style.css
+++ b/contexto-de-apilamiento/css/style.css
@@ -3,7 +3,7 @@
 
   1 => El orden del contexto de apilamiento es: (de delante a atrás):
   2 => Cajas posicionadas con un z-index de 1 ó más
-  3 => Cajas posicionados sin z-index declarado o z-index : auto;
+  3 => Cajas posicionadas sin z-index declarado o z-index : auto;
   4 => Cajas no posicionadas
   5 => Cajas con z-index negativo
 */
